--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Atlântico Golf — Quadro Kanban</title>
-  <meta name="description" content="Kanban por encarregado + Suprimentos. Equipe por card e quadros de resumo: total por encarregado (em andamento) e total geral. Sem Hxh." />
+  <meta name="description" content="Kanban por encarregado + Suprimentos." />
   <style>
     :root{
       --bg:#f5f7fb; --text:#111827; --muted:#475569; --brand:#0e3a6d;
