--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="logo-box"><img id="logo" class="logo-img" alt="Logo System Engenharia" /><div id="logoPh" class="logo-ph">LOGO</div></div>
       <div>
         <h1>Atlântico Golf — Quadro Kanban</h1>
-        <div class="subtitle" id="subtitle">Visão consolidada de campo e suprimentos. Equipe por card + resumo por encarregado e total geral. (Sem Hxh)</div>
+        <div class="subtitle" id="subtitle">Visão consolidada de campo e suprimentos.</div>
       </div>
     </div>
     <div class="meta">
