--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
 
     // ======= DADOS =======
     var DATA = {
-      logo_src: 'assets/logo.jpg',
+      // CORRIGIDO: nome do arquivo dentro de /assets
+      logo_src: 'assets/logo-system.jpg?v=1',
       encarregados:[
         {nome:'Severo (Hidráulica)', tarefas:[
           {codigo:'T-0313', titulo:'Rede hidráulica de entrada de água — conclusão', inicio:'16/09/2025', prazo_esperado:'19/09/2025', status:'exec', pct:85, obs:'Madeiras e paletes no caminho obstruído (almoxarifado da Asas).'},
@@ -344,3 +345,4 @@
   </script>
 </body>
 </html>
+
