--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Orygem — Quadro Kanban</title>
+  <title>Atlântico Golf — Quadro Kanban</title>
   <meta name="description" content="Kanban por encarregado + Suprimentos (dados via JSON externo)." />
   <style>
     :root{
