--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="brand">
       <div class="logo-box"><img id="logo" class="logo-img" alt="Logo" /><div id="logoPh" class="logo-ph">LOGO</div></div>
       <div>
-        <h1>Orygem — Quadro Kanban</h1>
+        <h1>Atlântico Golf — Quadro Kanban</h1>
       </div>
     </div>
     <div class="meta">
